# perspectiva_dados_projeto2

./: .gitignore  README.md  baixar_dados.py  main.py  pyproject.toml  requirements.txt
00_Dados/2026-05-16/: kabum_cpu_2026-05-16.csv  kabum_cpu_2026-05-16_features.csv  kabum_fonte_2026-05-16.csv  kabum_fonte_2026-05-16_features.csv  kabum_gpu_2026-05-16.csv  kabum_gpu_2026-05-16_features.csv  kabum_placa_mae_2026-05-16.csv  kabum_placa_mae_2026-05-16_features.csv  kabum_ram_2026-05-16.csv  kabum_ram_2026-05-16_features.csv  kabum_ssd_2026-05-16.csv  kabum_ssd_2026-05-16_features.csv  kabum_todas_pecas_2026-05-16.csv
00_Dados/2026-06-26/: kabum_cpu_2026-06-26.csv  kabum_cpu_2026-06-26_features.csv  kabum_fonte_2026-06-26.csv  (+10 more)
01_Scripts/: app.py  feature_engineering_kabum_todas_datas.ipynb  features.py  recomendacao_kabum.ipynb  salvar_catalogo.py  v2_01_modelo_preco_ram.ipynb  v2_02_modelo_preco_todas_categorias.ipynb
01_coleta/: scraper_kabum_pecas.ipynb
02_features/: feature_engineering_kabum.ipynb  feature_engineering_kabum_todas_datas.ipynb  features.py
03_modelagem/: recomendacao_kabum.ipynb  salvar_catalogo.py  v2_01_modelo_preco_ram.ipynb  v2_02_modelo_preco_todas_categorias.ipynb  v2_03_modelo_tabicl_unico.ipynb
04_app/: app.py
modelos/: catalogo.parquet  modelo_preco_cpu.joblib  modelo_preco_fonte.joblib  modelo_preco_gpu.joblib  modelo_preco_ssd.joblib  resultado_teste_cpu.csv  resultado_teste_fonte.csv  resultado_teste_gpu.csv  resultado_teste_placa_mae.csv  resultado_teste_ram.csv  resultado_teste_ssd.csv  resumo_metricas.csv
(+91 files in other folders)
