[project]
name = "perspectiva-dados-projeto2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4==4.12",
    "gdown==5.1",
    "joblib==1.3",
    "jupyter==1.0",
    "matplotlib==3.7",
    "nbformat==5.9",
    "numpy==1.24.4",
    "pandas==2.0",
    "pyarrow==14.0",
    "requests==2.31",
    "scikit-learn==1.3",
    "shap==0.44",
    "streamlit==1.30",
]
